codegen/ui_tests/rhai_fn_getter_multiple.stderr
error: conflicting getter
  --> ui_tests/rhai_fn_getter_multiple.rs:12:42
   |
12 |     #[rhai_fn(name = "foo", get = "foo", get = "bar")]
   |                                          ^^^
